--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
-
 .header {
   max-width: 1280px;
   margin: 0 auto;
@@ -17,18 +16,15 @@
   backdrop-filter: blur(10px);
   padding: 12px 32px;
 }
-
 .header__controls {
   display: flex;
   align-items: center;
 }
-
 .header__nav {
   display: flex;
   margin-right: 100px;
   column-gap: 62px;
 }
-
 .header__lang {
   display: flex;
   column-gap: 16px;
@@ -40,21 +36,18 @@
   font-size: 20px;
   font-weight: 700;
 }
-
 .navigation__link {
   color: #fff;
   font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-weight: 700;
 }
-
 .hero {
-  background: no-repeat url("../images/images/hero_image.jpg");
+  background: no-repeat url("../../images/images/hero_image.jpg");
   background-size: cover;
   height: 100vh;
   min-height: 800px;
 }
-
 .hero__title {
   color: #fff;
   font-family: "Unbounded", cursive;
@@ -63,7 +56,6 @@
   line-height: 99px;
   max-width: 612px;
 }
-
 .hero__subtitle {
   color: #fff;
   font-family: "Raleway", sans-serif;
@@ -78,15 +70,24 @@
   display: flex;
   justify-content: space-between;
 }
-
 .about__description {
   max-width: 620px;
 }
-
 .subscribe {
   width: 400px;
   height: 80px;
   position: fixed;
+}
+.subscribe__btn {
+  width: 400px;
+  padding: 12px 24px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  color: #393939;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .text {
