--- a/css/scss/blocks/subscribe.scss
+++ b/css/scss/blocks/subscribe.scss
@@ -3,5 +3,12 @@
   height: 80px;
   position: fixed;
   &__btn {
+    width: 400px;
+    padding: 12px 24px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+
+    @include text-mixin($black, $font-rail, 20px, 700);
   }
 }
