--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,10 @@
 .about__description {
   max-width: 620px;
 }
+.weather {
+  padding-bottom: 200px;
+}
+
 .subscribe {
   width: 400px;
   height: 80px;
@@ -88,6 +92,73 @@
   font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-weight: 700;
+}
+
+.rent {
+  background: no-repeat url("../../../images/images/rent_background.jpg");
+  background-size: cover;
+  min-height: 1096px;
+}
+.rent__column-left {
+  display: flex;
+  row-gap: 50px;
+  flex-direction: column;
+}
+.rent__item-left {
+  max-width: 510px;
+}
+.rent__column-right {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.rent__item-right {
+  width: 290px;
+}
+.rent__title {
+  font-family: "Raleway", sans-serif;
+  color: #fff;
+  font-size: 35px;
+  font-weight: 800;
+  padding-bottom: 100px;
+}
+.rent__subtitle {
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 23px;
+  padding-bottom: 20px;
+}
+.rent__subtitle--padding-32 {
+  padding-bottom: 32px;
+}
+.rent__list-item {
+  padding-bottom: 10px;
+  list-style-type: disc;
+  margin-left: 35px;
+}
+.rent__text {
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 120%;
+}
+.rent__text-big {
+  color: #fff;
+  font-family: "Unbounded", cursive;
+  font-size: 35px;
+  font-weight: 700;
+}
+.rent__price {
+  display: flex;
+  gap: 32px 127px;
+  flex-wrap: wrap;
+}
+.rent__price-item {
+  max-width: 100px;
 }
 
 .text {
