--- a/css/scss/utils/_mixin.scss
+++ b/css/scss/utils/_mixin.scss
@@ -3,6 +3,7 @@
 $background: #faffee; // body
 $white: #fff;
 $black: #393939;
+$black-transperent: rgba(57, 57, 57, 0.4);
 $green: #03463d;
 
 @mixin text($color, $font) {
