--- a/css/scss/blocks/rent.scss
+++ b/css/scss/blocks/rent.scss
@@ -1,7 +1,7 @@
 @import "../utils/mixin";
 
 .rent {
-  background: no-repeat url("../../../images/images/rent_background.jpg");
+  background: no-repeat url("../images/images/rent_background.jpg");
   background-size: cover;
   min-height: 1096px;
 
