--- a/css/scss/blocks/hero.scss
+++ b/css/scss/blocks/hero.scss
@@ -1,7 +1,7 @@
 @import "../utils/mixin";
 
 .hero {
-  background: no-repeat url("../../images/images/hero_image.jpg");
+  background: no-repeat url("../images/images/hero_image.jpg");
   background-size: cover;
   height: 100vh;
   min-height: 800px;
