--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,6 +1,7 @@
 @import "reset.css";
 @import "./utils/font";
 @import "./utils/mixin";
+@import "https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css";
 
 .text {
   @include text($black, $font-rail);
@@ -65,3 +66,8 @@
 @import "./blocks/gift";
 @import "./blocks/form";
 @import "./blocks/gift-card";
+@import "./blocks/services";
+
+.none {
+  display: none;
+}
