add tours block + small fixes

--- a/css/scss/blocks/header.scss
+++ b/css/scss/blocks/header.scss
@@ -10,6 +10,7 @@
   border-radius: 20px;
   backdrop-filter: blur(10px);
   padding: 12px 32px;
+  z-index: 100;
 
   &__controls {
     display: flex;
