--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -67,6 +67,7 @@
 @import "./blocks/form";
 @import "./blocks/gift-card";
 @import "./blocks/services";
+@import "./blocks/lakes";
 
 .none {
   display: none;
