--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Unbounded:wght@700;800&display=swap");
 .text {
   font-family: "Raleway", sans-serif;
   color: #393939;
@@ -86,6 +87,7 @@
   border-radius: 20px;
   backdrop-filter: blur(10px);
   padding: 12px 32px;
+  z-index: 100;
 }
 .header__controls {
   display: flex;
@@ -152,6 +154,7 @@
   width: 400px;
   height: 80px;
   position: fixed;
+  z-index: 100;
 }
 .subscribe__btn {
   width: 400px;
@@ -356,6 +359,45 @@
   border: 1px solid #393939;
   border-radius: 10px;
   text-align: center;
+}
+
+.tours {
+  overflow: hidden;
+}
+.tours__swiper {
+  padding-top: 100px;
+}
+
+.lakes__img {
+  border-radius: 10px;
+}
+.lakes__text {
+  padding-top: 32px;
+}
+
+.swipe-block {
+  width: 130%;
+}
+
+.special {
+  position: relative;
+}
+
+.btn-wrapper {
+  max-width: 1280px;
+}
+
+.lakes__slide {
+  min-height: 554px;
+}
+
+.swiper {
+  height: 100%;
+}
+
+.btn-wrapper {
+  top: -350px;
+  position: relative;
 }
 
 .none {
