--- a/css/scss/blocks/gift-card.scss
+++ b/css/scss/blocks/gift-card.scss
@@ -31,6 +31,7 @@
     align-items: center;
     text-align: center;
     padding-bottom: 42px;
+    background-color: $white;
   }
   &__footer {
     height: 49px;
