--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -75,6 +75,7 @@
 @import "./blocks/contacts";
 @import "./blocks/social";
 @import "./blocks/footer";
+@import "./blocks/instagram";
 
 .none {
   display: none;
