--- a/css/scss/blocks/instagram.scss
+++ b/css/scss/blocks/instagram.scss
@@ -3,6 +3,7 @@
 .instagram {
   overflow: hidden;
   position: relative;
+
   &__btn-wrapper {
     top: -150px;
     position: relative;
@@ -19,5 +20,11 @@
   &__img {
     width: 296px;
     height: auto;
+  }
+}
+
+@media (max-width: 1280px) {
+  .instagram {
+    padding: 0 15px;
   }
 }
