--- a/css/scss/blocks/rent.scss
+++ b/css/scss/blocks/rent.scss
@@ -20,6 +20,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    row-gap: 50px;
   }
 
   &__item-right {
@@ -68,6 +69,25 @@
 
 @media (max-width: 1280px) {
   .rent {
-    padding: 0 15px;
+    padding: 0 15px 100px;
+
+    &__title {
+      margin: 0 auto;
+      max-width: 620px;
+      padding-bottom: 50px;
+    }
+
+    &__item-left {
+      max-width: 100%;
+      width: 100%;
+    }
+
+    &__item-right {
+      width: 100%;
+    }
+
+    &__price {
+      justify-content: space-around;
+    }
   }
 }
