--- a/css/scss/blocks/instagram.scss
+++ b/css/scss/blocks/instagram.scss
@@ -19,14 +19,21 @@
     width: 296px;
   }
 
+  &__header {
+    padding-bottom: 100px;
+  }
+
   &__img {
     width: 296px;
     height: auto;
   }
-}
 
-@media (max-width: 1280px) {
-  .instagram {
+  @media (max-width: 1280px) {
     padding: 0 15px;
+  }
+  @media (max-width: 950px) {
+    &__header {
+      padding-bottom: 32px;
+    }
   }
 }
