--- a/css/scss/blocks/scrollblock.scss
+++ b/css/scss/blocks/scrollblock.scss
@@ -28,6 +28,8 @@ $white: #efefef;
 
   .items::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0);
+    background-color: rgb(206, 204, 204);
+    width: 900px;
   }
 
   .items::-webkit-scrollbar-thumb {
