--- a/css/scss/blocks/weather.scss
+++ b/css/scss/blocks/weather.scss
@@ -1,9 +1,16 @@
 .weather {
   padding-bottom: 200px;
-}
 
-@media (max-width: 1280px) {
-  .weather {
+  @media (max-width: 1280px) {
     padding: 0 15px;
+  }
+
+  @media (max-width: 950px) {
+    padding-bottom: 100px;
+
+    &__widget {
+      height: 350px;
+      overflow: hidden;
+    }
   }
 }
