--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -89,8 +89,8 @@
 @media (max-width: 1280px) {
   .row {
     flex-direction: column;
-    align-items: center;
-    row-gap: 50px;
+    // align-items: center;
+    // row-gap: 50px;
   }
 }
 
@@ -108,7 +108,7 @@
   }
 
   .grid-left {
-    max-width: 620px;
+    // max-width: 620px;
   }
 
   .grid-right {
@@ -150,4 +150,16 @@
 
 .link__underline {
   text-decoration: underline !important;
+}
+
+@media (max-width: 750px) {
+  .title {
+    font-size: 25px;
+  }
+
+  .title-block {
+    @include title($black, $font-rail);
+    padding-top: 0px;
+    padding-bottom: 50px;
+  }
 }
