--- a/css/main.css
+++ b/css/main.css
@@ -281,6 +281,10 @@
 .about__description {
   max-width: 620px;
 }
+.about__text:last-child {
+  padding-bottom: 0px;
+}
+
 @media (max-width: 1280px) {
   .about {
     padding: 0 15px;
@@ -289,18 +293,32 @@
 .weather {
   padding-bottom: 200px;
 }
+.weather__widget-mobile {
+  display: none;
+}
 @media (max-width: 1280px) {
   .weather {
-    padding: 0 15px;
+    padding: 0 15px 100px;
   }
 }
 @media (max-width: 950px) {
   .weather {
     padding-bottom: 100px;
   }
+  .weather__widget-mobile {
+    display: block;
+    padding-top: 100px;
+    max-width: 620px;
+    margin: 0 auto;
+  }
   .weather__widget {
-    height: 350px;
-    overflow: hidden;
+    display: none;
+  }
+  .weather__container {
+    padding-top: 50px;
+  }
+  .weather__title {
+    padding-top: 0px;
   }
 }
 
@@ -408,6 +426,9 @@
   }
   .rent__price {
     justify-content: space-around;
+  }
+  .rent__row {
+    align-items: center;
   }
 }
 .gift {
@@ -729,6 +750,9 @@
     font-weight: 800;
     padding-top: 0px;
     padding-bottom: 50px;
+  }
+  .title-block__padding-top {
+    padding-top: 50px;
   }
 }
 
